--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "preentrega1garciacabrera",
+  "homepage": "http://{Edgarjgc}.github.io/{PreEntrega1GarciaCabrera}",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -21,6 +22,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "gh-pages": "^6.1.0",
     "vite": "^5.0.0"
   }
 }
